--- a/angular.json
+++ b/angular.json
@@ -105,14 +105,14 @@
               "src/manifest.webmanifest"
             ],
             "styles": [
-              "src/styles.css",
-              "node_modules/primeng/resources/themes/nove-light/theme.css",     
+              "src/styles.css",    
               "node_modules/primeng/resources/primeng.min.css",
               "node_modules/primeicons/primeicons.css"
             ],
                         "scripts": [
-              "../node_modules/jquery/dist/jquery.js","../node_modules/tether/dist/js/tether.js","../node_modules/bootstrap/dist/js/bootstrap.js"
-            ]
+              "./node_modules/jquery/dist/jquery.js","./node_modules/tether/dist/js/tether.js","./node_modules/bootstrap/dist/js/bootstrap.js"
+            ],
+            "codeCoverage": true
           }
         }
       }
