--- a/package.json
+++ b/package.json
@@ -25,16 +25,19 @@
     "@fortawesome/fontawesome-svg-core": "^1.2.35",
     "@fortawesome/free-solid-svg-icons": "^5.15.3",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
-    "angularx-social-login": "^4.0.1",
+    "angularx-social-login": "^4.1.0",
     "bootstrap": "^5.1.3",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.6.0",
     "ng-img-magnifier": "^1.2.1",
     "ngx-image-zoom": "^0.6.0",
     "ngx-img-zoom": "^4.1.2",
     "ngx-pagination": "^5.1.1",
     "primeicons": "^5.0.0",
-    "primeng": "^13.0.0-rc.2",
+    "primeng": "^13.3.0",
     "rxjs": "~6.6.0",
+    "save": "^2.4.0",
+    "tether": "^2.0.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
